--- a/nasa_space_app/pubspec.yaml
+++ b/nasa_space_app/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.2.10+1
   http: ^0.13.5
+  url_launcher: ^6.1.6
+  flutter_bloc: ^8.1.1
    
 
 flutter_native_splash:
